<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DeNoise - Calming Sounds</string>
    <string name="denoise">DeNoise</string>
    <string name="relaxing_white_noise">Relaxing White Noise</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_night">Good Night</string>
    <string name="good_day">Good Day</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="brown_noise">Brown Noise</string>
    <string name="currently_playing">Currently Playing</string>
    <string name="pink_noise">Pink Noise</string>
    <string name="other_calming_sounds">Other calming sounds...</string>
    <string name="white_noise">White Noise</string>
    <string name="next">Next</string>
    <string name="hours">Hours:</string>
    <string name="minutes">Minutes:</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="relax">Relax</string>
    <string name="focus">Focus</string>
    <string name="enjoy">Enjoy</string>
    <string name="onboarding_slide_1">Enjoy calming white noise sounds for focus, relaxation and sleep.</string>
    <string name="onboarding_slide_2">Finish your work with razor-sharp focus while filtering all distractions.</string>
    <string name="onboarding_slide_3">Get the relaxation you need and deserve, while finding your inner peace.</string>
    <string name="start_using_denoise">Start using DeNoise</string>
    <string name="tap_to_return">Tap to return to the application</string>
    <string name="calming_rain">Calming Rain</string>
    <string name="beach_waves">Beach Waves</string>
    <string name="distant_shore">Distant Shore</string>
    <string name="relaxing_forest">Relaxing Forest</string>

    <string name="pref_yourName">Your Name</string>
    <string name="pref_nameSummary">Enter your name for the customized greetings message. This is optional.</string>
    <string name="pref_darkMode">Dark Mode</string>
    <string name="pref_darkModeOn">Dark Mode is activated.</string>
    <string name="pref_darkModeOff">Dark Mode is not activated.</string>
    <string name="pref_defaultSound">Default Sound</string>
    <string name="pref_defaultSoundDialog">Select default sound</string>
    <string name="pref_defaultSoundSummary">The default sound which will be selected upon opening the application.</string>
    <string name="pref_language">Language</string>
    <string name="pref_languageSummary">Select application language.</string>
    <string name="pref_languageDialog">Select application language</string>

    <string name="why_white_noise">Why White Noise?</string>
    <string name="white_noise_description1">White noise significantly improves sleep, focus and concentration, as well as helps reduce high levels of stress. By removing the subtle distractions of daily life, you are ensured to be focused and relaxed while seeping into the mesmerizing background sounds.</string>
    <string name="white_noise_description2">Discover your finest potential with the ability to focus solely on yourself. We are here to help you reach your goals.</string>
    <string name="email">tarapogancev@gmail.com</string>
    <string name="contact_developer">Contact the Developer</string>
    <string name="choose_email_client">Choose an Email client:</string>

    <string-array name="pref_defaultSound">
        <item>White Noise</item>
        <item>Pink Noise</item>
        <item>Brown Noise</item>
        <item>Calming Rain</item>
        <item>Beach Waves</item>
        <item>Relaxing Forest</item>
        <item>Distant Shore</item>
    </string-array>
    <string-array name="pref_defaultSoundVal">
        <item>White Noise</item>
        <item>Pink Noise</item>
        <item>Brown Noise</item>
        <item>Calming Rain</item>
        <item>Beach Waves</item>
        <item>Relaxing Forest</item>
        <item>Distant Shore</item>
    </string-array>

    <string-array name="pref_language">
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Italian</item>
        <item>Serbian</item>
    </string-array>
    <string-array name="pref_languageVal">
        <item>en</item>
        <item>es</item>
        <item>it</item>
        <item>fr</item>
        <item>sr</item>
    </string-array>

</resources>