<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.PinkNoisePlayer"
    android:background="@drawable/sunset"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/black_gradient"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80090E0E" />

    <RelativeLayout
        android:id="@+id/layout_topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/button_timer"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cardCornerRadius="20dp"
            android:backgroundTint="#80000000"
            android:elevation="5dp"
            android:layout_alignParentEnd="true"
            android:foreground="@drawable/ripple"
            >

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:padding="5dp"
                android:layout_gravity="center"
                android:src="@drawable/timer"
                app:tint="@color/white"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/button_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cardCornerRadius="20dp"
            android:backgroundTint="#80000000"
            android:elevation="5dp"
            android:layout_alignParentStart="true"
            android:foreground="@drawable/ripple"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                android:layout_marginEnd="3dp"
                android:layout_gravity="center"
                android:src="@drawable/back"
                app:tint="@color/white"/>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <TextView
        android:id="@+id/text_noiseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_topBar"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/pink_noise"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_timer"
        style="@style/TitleFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_noiseTitle"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_regular"
        android:text="00:00"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_cards"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="5dp"
        android:text="@string/other_calming_sounds"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/layout_cards"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@id/layout_playControls"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        >


        <androidx.cardview.widget.CardView
            android:id="@+id/card_brown"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="20dp"
            android:foreground="@drawable/ripple">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/waterfall"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/waterfall_blur"
                    android:layout_alignParentBottom="true"
                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#86000000"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:paddingBottom="10dp"
                        android:text="@string/brown_noise"
                        android:textColor="#D1D1D1"
                        android:textSize="14sp" />

                </RelativeLayout>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:layout_marginStart="10dp"
            app:cardCornerRadius="20dp"
            android:foreground="@drawable/ripple"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ocean"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/ocean_blur"
                    android:layout_alignParentBottom="true"
                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#9C000000"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:paddingBottom="10dp"
                        android:text="@string/white_noise"
                        android:textColor="#D1D1D1"
                        android:textSize="14sp" />


                </RelativeLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <RelativeLayout
        android:id="@+id/layout_playControls"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/sunset_blur"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#86190F13" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingHorizontal="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pink_noise"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currently_playing"
                android:textColor="#BCBCBC" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp">

            <androidx.cardview.widget.CardView
                android:padding="3dp"
                android:id="@+id/button_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:background="@color/teal"
                android:foreground="@drawable/ripple"
                android:backgroundTint="@android:color/transparent"
                android:outlineSpotShadowColor="@android:color/transparent"
                >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/previous"
                app:tint="@color/white"
                android:padding="5dp"
                />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/button_playPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:layout_marginHorizontal="5dp"
                android:background="@color/teal"
                android:foreground="@drawable/ripple"
                android:backgroundTint="@android:color/transparent"
                android:outlineSpotShadowColor="@android:color/transparent"
                >
                <ImageView
                    android:id="@+id/img_playPause"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:src="@drawable/pause_button"
                    app:tint="@color/white"
                    android:padding="5dp"
                    />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:padding="3dp"
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:background="@color/teal"
                android:foreground="@drawable/ripple"
                android:backgroundTint="@android:color/transparent"
                android:outlineSpotShadowColor="@android:color/transparent"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/next"
                    app:tint="@color/white"
                    android:padding="5dp"
                    />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>